# tsumegolab

./: .gitignore  Dockerfile  Justfile  README.md  pyproject.toml
config/: katago_analysis.cfg  katago_gtp.cfg
tests/problems/cho-1-elementary/: cho-1-elementary-001.sgf  cho-1-elementary-002.sgf  cho-1-elementary-003.sgf  cho-1-elementary-004.sgf  cho-1-elementary-005.sgf  cho-1-elementary-006.sgf  cho-1-elementary-007.sgf  cho-1-elementary-008.sgf  cho-1-elementary-009.sgf  cho-1-elementary-010.sgf  cho-1-elementary-011.sgf  cho-1-elementary-012.sgf  cho-1-elementary-013.sgf  cho-1-elementary-014.sgf  cho-1-elementary-015.sgf  cho-1-elementary-016.sgf  cho-1-elementary-017.sgf  cho-1-elementary-018.sgf  cho-1-elementary-019.sgf  cho-1-elementary-020.sgf  cho-1-elementary-021.sgf  cho-1-elementary-022.sgf  cho-1-elementary-023.sgf  cho-1-elementary-024.sgf  cho-1-elementary-025.sgf  cho-1-elementary-026.sgf  cho-1-elementary-027.sgf  cho-1-elementary-028.sgf  cho-1-elementary-029.sgf  cho-1-elementary-030.sgf  cho-1-elementary-031.sgf  cho-1-elementary-032.sgf  cho-1-elementary-033.sgf  cho-1-elementary-034.sgf  cho-1-elementary-035.sgf  cho-1-elementary-036.sgf  cho-1-elementary-037.sgf  cho-1-elementary-038.sgf  cho-1-elementary-039.sgf  cho-1-elementary-040.sgf  (+860 more)
tsumegolab/: analyze.py  board.py  client.py  config.py  kata_analysis.py  katago.py  main.py  run.py  server.py  sgflib.py  tsumego.py  tsumego_frame.py  utils.py
tsumegolab/utils/: board_utils.py  coord_utils.py  katago_utils.py  kifu_utils.py  tsumego_utils.py
