[tool.poetry]
name = "tsumegolab"
version = "0.1.0"
description = "Tsumego Lab"
authors = ["Oleksandr Hiliazov <oleksandr.hiliazov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
scipy = "^1.11.3"
typer = "^0.9.0"
pydantic = "^2.5.3"
loguru = "^0.7.2"
websockets = "^12.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
setuptools = "^68.2.2"
ruff = "^0.1.3"



[tool.poetry.group.svg.dependencies]
jinja2 = "^3.1.2"

[tool.ruff]
line-length = 79
extend-select = ["I"]

[tool.ruff.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
